Reduces resume to 3 items on cellphone-widths, adds background paper to resume-tabs, adds margin to fix 'about' hidden behind navbar

--- a/css/custom.css
+++ b/css/custom.css
@@ -162,7 +162,6 @@
     margin-top: -3%
   }
 
-
   .js-icon[style] {
     font-size: 550% !important;
   }
@@ -180,22 +179,71 @@
     margin-left: -10%;
   }
 
-  #services .my-in-technologies {
-    display: none;
-  }
   
   iframe {
     width: 100%;
     height: 50%;
   }
 
-  .regular-footer {
-    display: none;
-  }
 
   .cellphone-footer {
     display: inline-block;
   }
+
+  #nav-PDF-tab,
+  #nav-military-tab,
+  .resume-logo,
+  .regular-footer,
+  /* #myTab ion-icon, */
+  #services .my-in-technologies {
+    display: none;
+  }
+
+  time {
+    font-weight: 100;
+    color: grey;
+  }
+
+  .experience-section {
+    background-image: url(../img/vintage-paper.png)
+  }
+
+  .education-section {
+    background-image: url(../img/pink-paper.jpg)
+  }
+
+  .projects-section {
+    background-image: url(../img/white-paper.jpg)
+  }
+
+  #nav-projects-tab {
+    background-image: url(../img/white-paper.jpg)
+  }
+
+  #nav-experience-tab {
+    background-image: url(../img/vintage-paper.png)
+  }
+
+  #nav-education-tab {
+    background-image: url(../img/pink-paper.jpg)
+  }
+
+#digital-resume .nav-item {
+  margin-bottom: 1px;
+  color: black;
+  border-bottom: 1px solid transparent;
+  text-transform: uppercase;
+  font-size: 79.3%;
+}
+
+
+#about {
+  margin-top: 25%;
+}
+
+
+
+
 }
 
 /*-------------------------------------------*/
